{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 1234,
  "lineage": "1b3993d7-06e6-f72c-1bea-e981d6341876",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-1",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:loadbalancer/app/3tier20240423150206904900000006/6e001fc2c11fd155",
            "arn_suffix": "app/3tier20240423150206904900000006/6e001fc2c11fd155",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "3tier20240423150206904900000006-653287844.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:loadbalancer/app/3tier20240423150206904900000006/6e001fc2c11fd155",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "3tier20240423150206904900000006",
            "name_prefix": "3tier",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a649eba34f79404"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08cfc929573575c31"
              },
              {
                "subnet_id": "subnet-0f69bb90ac1ce84f8"
              }
            ],
            "subnets": [
              "subnet-08cfc929573575c31",
              "subnet-0f69bb90ac1ce84f8"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "vpc_id": "vpc-058b36f5b26bfb805",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listner-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:listener/app/3tier20240423150206904900000006/6e001fc2c11fd155/1950292f52870e1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:targetgroup/alb-tg20240423150154930200000001/f66ceabf29f6a9b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:listener/app/3tier20240423150206904900000006/6e001fc2c11fd155/1950292f52870e1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:loadbalancer/app/3tier20240423150206904900000006/6e001fc2c11fd155",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.test",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tg-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:targetgroup/alb-tg20240423150154930200000001/f66ceabf29f6a9b2",
            "arn_suffix": "targetgroup/alb-tg20240423150154930200000001/f66ceabf29f6a9b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:targetgroup/alb-tg20240423150154930200000001/f66ceabf29f6a9b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:287093974061:loadbalancer/app/3tier20240423150206904900000006/6e001fc2c11fd155"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg20240423150154930200000001",
            "name_prefix": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.ami-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "g-server",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eba6c58b7918d3a1",
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:instance/i-0560dd4f862209f10",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0560dd4f862209f10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TOK",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047e30ca0e396da2f",
            "private_dns": "ip-10-0-1-63.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_ip": "54.199.139.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088ea29c3ba6ed4a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f69bb90ac1ce84f8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0591aff6321f6324f"
            ]
          },
          "dependencies": [
            "module.rds.aws_db_instance.database1",
            "module.rds.aws_db_subnet_group.subnet-grp",
            "module.sg-2.aws_security_group.my-sg",
            "module.sg-3.aws_security_group.my-sg",
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_subnet.pvt-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:security-group/sg-04a649eba34f79404",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a649eba34f79404",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "287093974061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg- lb-sg"
            },
            "tags_all": {
              "Name": "sg- lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.sg-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ami-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:security-group/sg-0591aff6321f6324f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0591aff6321f6324f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ami-sg",
            "name_prefix": "",
            "owner_id": "287093974061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg- ami-sg"
            },
            "tags_all": {
              "Name": "sg- ami-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:security-group/sg-020181b4cdc8accb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020181b4cdc8accb0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a649eba34f79404"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a649eba34f79404"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "287093974061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg- web-sg"
            },
            "tags_all": {
              "Name": "sg- web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.sg-3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:security-group/sg-02a7287c370fee5c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a7287c370fee5c2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020181b4cdc8accb0",
                  "sg-0591aff6321f6324f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "287093974061",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg- rds-sg"
            },
            "tags_all": {
              "Name": "sg- rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-2.aws_security_group.my-sg",
            "module.sg.aws_security_group.my-sg",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eip1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae80e02700d3dfb0",
            "association_id": "eipassoc-01672da60aa6fa9a7",
            "domain": "vpc",
            "id": "eipalloc-0ae80e02700d3dfb0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-06d095d1d4c4519b2",
            "private_dns": "ip-10-0-1-86.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-52-197-144-61.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.197.144.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "eip2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0930b789a3df3995b",
            "association_id": "eipassoc-0658329617a329faf",
            "domain": "vpc",
            "id": "eipalloc-0930b789a3df3995b",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-09d1530fffb712a97",
            "private_dns": "ip-10-0-2-154.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.154",
            "public_dns": "ec2-35-76-82-204.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.82.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:internet-gateway/igw-052aeb68a5c4591a8",
            "id": "igw-052aeb68a5c4591a8",
            "owner_id": "287093974061",
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "net-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae80e02700d3dfb0",
            "association_id": "eipassoc-0f583989e12e0dfeb",
            "connectivity_type": "public",
            "id": "nat-099d0e91c6f5d6175",
            "network_interface_id": "eni-08e0962c599f460eb",
            "private_ip": "10.0.1.233",
            "public_ip": "52.197.144.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f69bb90ac1ce84f8"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "net-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0930b789a3df3995b",
            "association_id": "eipassoc-0f219d150e8ff4cc5",
            "connectivity_type": "public",
            "id": "nat-055e7f69a164e6739",
            "network_interface_id": "eni-0fd1baf9eec775bdf",
            "private_ip": "10.0.2.144",
            "public_ip": "35.76.82.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08cfc929573575c31"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:route-table/rtb-0e0b91c2b081a2312",
            "id": "rtb-0e0b91c2b081a2312",
            "owner_id": "287093974061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052aeb68a5c4591a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-1"
            },
            "tags_all": {
              "Name": "public-route-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.myigw",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pvt-rt-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:route-table/rtb-05673cb66b468dab0",
            "id": "rtb-05673cb66b468dab0",
            "owner_id": "287093974061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-099d0e91c6f5d6175",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n-pvt-rt-1"
            },
            "tags_all": {
              "Name": "n-pvt-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_nat_gateway.nat",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "pvt-rt-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:route-table/rtb-07011026fb22aa0ae",
            "id": "rtb-07011026fb22aa0ae",
            "owner_id": "287093974061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-055e7f69a164e6739",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n-pvt-rt-2"
            },
            "tags_all": {
              "Name": "n-pvt-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_nat_gateway.nat",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrt-pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-snet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e015feea404a0bd4",
            "route_table_id": "rtb-0e0b91c2b081a2312",
            "subnet_id": "subnet-0f69bb90ac1ce84f8"
          },
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.myigw",
            "module.vpc-1.aws_route_table.pub-rt",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "pub-snet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640f822e646c8b8b",
            "route_table_id": "rtb-0e0b91c2b081a2312",
            "subnet_id": "subnet-08cfc929573575c31"
          },
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.myigw",
            "module.vpc-1.aws_route_table.pub-rt",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt-assot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "association-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0431cfdd5750f900a",
            "route_table_id": "rtb-05673cb66b468dab0",
            "subnet_id": "subnet-0c7328a2315fe0982"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_nat_gateway.nat",
            "module.vpc-1.aws_route_table.pvt-rt",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_subnet.pvt-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "association-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091d6fb155d185dda",
            "route_table_id": "rtb-07011026fb22aa0ae",
            "subnet_id": "subnet-0b929443135200c02"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.name",
            "module.vpc-1.aws_nat_gateway.nat",
            "module.vpc-1.aws_route_table.pvt-rt",
            "module.vpc-1.aws_subnet.public-sub",
            "module.vpc-1.aws_subnet.pvt-sub",
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-snet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:subnet/subnet-0f69bb90ac1ce84f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f69bb90ac1ce84f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287093974061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub-snet-1"
            },
            "tags_all": {
              "Name": "sub-pub-snet-1"
            },
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "pub-snet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:subnet/subnet-08cfc929573575c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cfc929573575c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287093974061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub-snet-2"
            },
            "tags_all": {
              "Name": "sub-pub-snet-2"
            },
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pvt-snet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:subnet/subnet-0c7328a2315fe0982",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7328a2315fe0982",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287093974061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-pvt-snet-1"
            },
            "tags_all": {
              "Name": "p-pvt-snet-1"
            },
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        },
        {
          "index_key": "pvt-snet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:subnet/subnet-0b929443135200c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b929443135200c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287093974061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-pvt-snet-2"
            },
            "tags_all": {
              "Name": "p-pvt-snet-2"
            },
            "vpc_id": "vpc-058b36f5b26bfb805"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:287093974061:vpc/vpc-058b36f5b26bfb805",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9af47a24ab1d286",
            "default_route_table_id": "rtb-005a021fc3dff3b1b",
            "default_security_group_id": "sg-08c005fe318dd5e15",
            "dhcp_options_id": "dopt-0a5106b1097e5ab80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058b36f5b26bfb805",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005a021fc3dff3b1b",
            "owner_id": "287093974061"
          }
        }
      ]
    }
  ]
}